# aadc2016

./: LICENSE  Readme.md
ADTF_Project/autonomDrive/: autonomDrive.prj
ADTF_Project/autonomDrive/config/: info.txt  system.Common.runninglayout  system.config_layout  system.xml
ADTF_Project/autonomDrive/config/system_config_files/Main/: __kernel_scheduling.config
ADTF_Project/autonomDrive/config/system_config_files/Main_with_Emergency_Break/: __kernel_scheduling.config
ADTF_Project/autonomDrive/config/system_config_files/ObstacleTest/: __kernel_scheduling.config
aadcUser/: .gitignore  CMakeLists.txt  Doxyfile
aadcUser/config/: BirdviewCal_lowRes.yml  birdEyeConfig_Goffin_640x480_corners.txt  completeCal.yml  completeCalBackup.yml  xtion_intrinsic_calib.yml  xtion_intrinsic_calib_High_res.yml  xtion_intrinsic_calib_low_res.yml
aadcUser/config/Audi/: BirdviewCal.yml
aadcUser/config/General/: xtionSettings.xml  xtionSettingsBelichtung.xml
aadcUser/config/Goffin/: BirdviewCal_lowRes.yml  BirdviewCal_lowRes2.yml  BirdviewCal_lowRes_newOrigin.yml  xtion_intrinsic_calib_low_res.yml
aadcUser/config/Inka/: BirdviewCal_lowRes.yml  xtion_intrinsic_calib_low_res.yml
aadcUser/description/: kacadu.description
aadcUser/include/: adtf2OpenCV.h
aadcUser/src/AADC_XtionCamera/: copy of xtionGrabber.h  xtionGrabber.h
aadcUser/src/KACADU_BirdViewCalibration/: BirdViewCalibration.cpp  BirdViewCalibration.h  CMakeLists.txt  displaywidget.cpp  displaywidget.h
aadcUser/src/KACADU_BirdViewFilter/: BirdViewFilter.cpp  BirdViewFilter.h  CMakeLists.txt
aadcUser/src/KACADU_ConverterWheels/: CMakeLists.txt  cKacaduConverterWheels.cpp  cKacaduConverterWheels.h
aadcUser/src/KACADU_EmergencyBreak/: CMakeLists.txt  EmergencyBreak.cpp  EmergencyBreak.h
aadcUser/src/KACADU_InheritTestThroughput/: CMakeLists.txt  InheritTestThroughput.cpp  InheritTestThroughput.h
aadcUser/src/KACADU_InheritanceTemplates/: InheritThroughput.cpp  InheritThroughput.h
aadcUser/src/KACADU_LaneFollowing/: CMakeLists.txt  CMakeLists_old.txt  LaneFollowing.cpp  LaneFollowing.h
aadcUser/src/KACADU_LaneFollowing/NNLaneTracker/: CMakeLists.txt  NNPredictor.cpp  NNPredictor.h  cmd  copy of host.h  hello.lua  hello_orig.lua  host  host.cpp  host.h  host_old_old.cpp
aadcUser/src/KACADU_MonsterFilter/: CMakeLists.txt  MonsterFilter.cpp  MonsterFilter.h
aadcUser/src/KACADU_SaveImage/: CMakeLists.txt  README.txt  SaveImage.cpp  SaveImage.h
aadcUser/src/KACADU_SteeringController/: CMakeLists.txt  SteeringController.cpp  SteeringController.h
aadcUser/src/KACADU_USView/: CMakeLists.txt  USView.cpp  USView.h  stdafx.h
aadcUser/src/KACADU_WheelSpeedController/: CMakeLists.txt  cWheelSpeedController.cpp  cWheelSpeedController.h
aadcUser/src/KACADU_WorldCoordCalculator/: CMakeLists.txt  WorldCoordCalculator.cpp  WorldCoordCalculator.h
aadcUser/src/KACADU_WorldCoordVisualizer/: CMakeLists.txt  WorldCoordVisualizer.cpp  WorldCoordVisualizer.h
aadcUser/src/Util/BirdViewPosConv/: BirdViewPosConv.cpp  BirdViewPosConv.h  CMakeLists.txt  main.cpp
oadrive/script/jenkins/: oadrive_stable.bash  oadrive_testing.bash
